# perception_models

./: .gitignore  README.md  justfile  pyproject.toml
apps/plm/: pyproject.toml
apps/plm/perception_models/plm/: consolidate.py  generate.py  tokenizer.py  train.py
libs/core/: pyproject.toml
libs/core/perception_models/core/: checkpoint.py  logger.py  metrics.py  profiling.py  stool.py  transformer.py
libs/core/perception_models/core/data/: data.py  data_collators.py  dataloader.py  preprocessor.py
libs/core/perception_models/core/plm/: generate.py  transformer.py
libs/core/perception_models/core/transforms/: video_transform.py
libs/core/perception_models/core/vision_encoder/: pe.py  transforms.py
libs/core/perception_models/core/vision_projector/: mlp.py
libs/core/tests/: dataloader_test.py
nb/: pe_example_01.ipynb
