[project]
name = "perception-models"
version = "1.0.0"
authors = [
    { name = "Daniel Barker", email = "dcbark01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "blobfile==3.0.0",
    "datatrove>=0.5.0",
    "einops==0.8.1",
    "fsspec>=2025.3.0",
    "ftfy>=6.3.1",
    "iopath==0.1.10",
    "lm-eval==0.4.8",
    "msgspec==0.19.0",
    "numpy==2.1.2",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "orjson==3.10.15",
    "pillow==11.0.0",
    "pyahocorasick==2.1.0",
    "pycocoevalcap==1.2",
    "pynvml==12.0.0",
    "rouge-score==0.1.2",
    "sacrebleu==2.5.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentencepiece==0.2.0",
    "tiktoken==0.9.0",
    "timm==1.0.15",
    "tokenizers==0.21.1",
    "torchcodec==0.1.0",
    "torchdata==0.11.0",
    "viztracer==1.0.3",
    "wandb==0.19.8",
    "webdataset==0.2.111",
    "torch~=2.5.1",
    "torchvision~=0.20.1",
    "torchaudio~=2.5.1",
    "xformers",
    "torchcodec~=0.1",
    "decord>=0.6.0",
]

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
